--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,7 @@
 PORT = 3000
 
 MONGO_URI = mongodb+srv://shaiahwren:e9TZCUbNNY80xMLR@cluster0.nvuql.mongodb.net/bookworms?retryWrites=true&w=majority
+
+GOOGLE_CLIENT_ID = 1005364568194-mse0kramt44pg0e4e4a43q34smedoifd.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET = Y0nc5w5bZvtue0ZXEGgtvakV
